algunos cambios sass y SEO

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="estetica y belleza">
-
+    <!-- Meta Tags -->
+    <meta name="description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como por ejemplo: la reducción de grasa adiposa con criolipolisis, eliminación de vello con laser IPL o soprano, bótox, himfu para el moldeado del cuerpo, tratamiento faciales rejuvenecedores y mucho más.">
+    <meta name="keywords" content="Criolipolisis, depilaser, botox, himfu, lifting, dermapen, limpieza facial, exfoliación, plasma, mesolifting, velaslim, radiofrecuencia, velashape">
     <!-- Titulo de la Pagina -->
     <title>Mari Beuaty Clinic</title>
 
+    <!-- Open graph -->
+
+    <meta property="og:locale" content="es">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mari Beuaty Clinic">
+    <meta property="og:description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como: Criolipolisis, Himfu, Velashape, Botox y mucho más">
+    <meta property="og:url" content="https://maribeautyclinic.000webhostapp.com/servicios-details.html">
+    <meta property="og:image" content="https://maribeautyclinic.000webhostapp.com/assets/img/hero-img-3.png.">
     <!-- Favicon -->
     <link rel="icon" href="assets/img/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -26,7 +36,7 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     
-    <!-- Bootstrap CSS vendor -->
+    <!-- CSS vendor Bootstrap y otros -->
     <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     
@@ -132,7 +142,7 @@
                 </h3>
             </div >
             <div class="col-lg-6 order-1 order-lg-2 hero-img"> 
-                <img src="assets/img/hero-img-3.png" alt="estetica belleza corporal" class="img-hero-variante">
+                <img src="assets/img/imagen-mujer-beuaty-3.png" alt="estética belleza corporal" class="img-hero-variante">
             </div>
 
         </div>
@@ -149,13 +159,13 @@
   <div class="container">
     <div class="row">
         <div class="nosotros-video col-xl-7 col-lg-6 d-flex justify-content-center align-items-stretch position-relative">
-          <video src="assets/video/video_preview_facial_treatment.mp4" controls poster="assets/img/new-srv-banner.jpg" class="video">
+          <video src="assets/video/video_preview_facial_treatment.mp4" controls poster="assets/img/new-srv-banner.jpg" class="video" title="tratamiento estético laser facial">
             Tu navegador no admite el elemento <code>video</code>.
           </video>
         </div>
 
         <div class="nosotros-icon col-xl-5 col-lg-6 d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-          <h3>Mari Beauty Clinic Tratamientos Esteticos</h3>
+          <h4>Mari Beauty Clinic Tratamientos Esteticos</h4>
           <p>Somos un Centro Estético especializados en tratamientos faciales regenerativos, antiage, manchas, imperfecciones, en otros y, Corporales contando con las mejores técnicas y tecnología en 
             aparatología para reducir medidas, combatir la flacidez, atenua estrías, esculpir gluteos entre otros </p>
 
@@ -189,7 +199,7 @@
 
     <div class="section-title">
       <span>Servicios</span>
-      <h2>Servicios</h2>
+      <h4>Servicios</h4>
       <p>Apúntate a unos de nuestros tratamientos estéticos donde podrás reducir medidas, quitas imperfecciones y lucir una piel mucho más radiante.</p>
     </div>
 
@@ -222,9 +232,9 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="/assets/img/botox/botox-labios.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/botox/botox-labios.jpg" class="rounded img-fluid" alt="imagen Bótox">
           <div class="portfolio-info">
-            <h4>Botox</h4>
+            <h4>Bótox</h4>
             <p>Reducir arrugas y líneas de expresión </p>
             <div class="portfolio-links">
               <a href="/assets/img/botox/botox-terapia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 3"><i class="bx bx-plus"></i></a>
@@ -236,7 +246,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
-          <img src="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" class="rounded img-fluid" alt="imagen Depilaser">
           <div class="portfolio-info">
             <h4>Depilaser</h4>
             <p>Eliminar vello en distintas zonas</p>
@@ -250,7 +260,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
-          <img src="/assets/img/dermapen/metodo-facial-dermapen.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/dermapen/metodo-facial-dermapen.jpg" class="rounded img-fluid" alt="imagen Dermapen">
           <div class="portfolio-info">
             <h4>Dermapen</h4>
             <p>Mejorar aspecto y textura de la piel</p>
@@ -264,7 +274,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="/assets/img/Himfu/himfu.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/Himfu/himfu.jpg" class="rounded img-fluid" alt="imagen Himfu">
           <div class="portfolio-info">
             <h4>Himfu</h4>
             <p>Eliminar tejido graso subcutáneo</p>
@@ -278,7 +288,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
-          <img src="/assets/img/lifting/aumento-gluteo.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/lifting/aumento-gluteo.jpg" class="rounded img-fluid" alt="imagen Lifting">
           <div class="portfolio-info">
             <h4>Lifting</h4>
             <p>Estiramiento de la piel para eliminar arrugas</p>
@@ -292,7 +302,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
-          <img src="/assets/img/limpieza-facial/limpieza-facial.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/limpieza-facial/limpieza-facial.jpg" class="rounded img-fluid" alt="imagen Limpieza Facial">
           <div class="portfolio-info">
             <h4>Limpieza Facial</h4>
             <p>Limpieza y tratamiento rejuvenecedor </p>
@@ -306,7 +316,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
-          <img src="/assets/img/mesolifting/mesolifting-cuello.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/mesolifting/mesolifting-cuello.jpg" class="rounded img-fluid" alt="imagen Mesolifting">
           <div class="portfolio-info">
             <h4>Mesolifting</h4>
             <p>Rejuvenecimiento de la piel y atenuación de las arrugas</p>
@@ -320,7 +330,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="/assets/img/mesoterpia/mesoterapia-abdomen.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/mesoterpia/mesoterapia-abdomen.jpg" class="rounded img-fluid" alt="imagen Mesoterapia">
           <div class="portfolio-info">
             <h4>Mesoterapia</h4>
             <p>Reducir celulitis y tejido adiposo</p>
@@ -334,7 +344,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" class="rounded img-fluid" alt="Imagen Velashape">
           <div class="portfolio-info">
             <h4>Velashape</h4>
             <p>Reducir el contorno corporal y la celulitis</p>
@@ -348,7 +358,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velaslim/Radiofrecuencia-corporal.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/velaslim/Radiofrecuencia-corporal.jpg" class="rounded img-fluid" alt="imagen Radiofrecuencia Corporal">
           <div class="portfolio-info">
             <h4>Radiofrecuencia Corporal</h4>
             <p>Combatir la flacidez y la celulitis</p>
@@ -362,7 +372,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velaslim/radiofrecuencia-1.jpg" class="rounded img-fluid" alt="">
+          <img src="/assets/img/velaslim/radiofrecuencia-1.jpg" class="rounded img-fluid" alt="imagne Valaslim">
           <div class="portfolio-info">
             <h4>Velaslim</h4>
             <p>Reducir circunferencia corporal y la celulitis</p>
@@ -411,7 +421,7 @@
 
         <div class="section-title">
           <span>Paquetes</span>
-          <h2>Paquetes</h2>
+          <h4>Paquetes</h4>
           <p>Contamos para vos las mejores combinaciones de tratamientos estéticos, contáctanos y adquiera uno de nuestros paquetes 
             exclusivos con hasta un 15% descuentos en cada una de las terapias</p>
         </div>
@@ -419,7 +429,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/plan-reductorjpg.jpg" class="card-img-top" alt="...">
+              <img src="/assets/img/paquetes/plan-reductorjpg.jpg" class="card-img-top" alt="Plan estético Reductor con Himfu-Ondas_Ondas_de_Choque">
               <div class="card-body">
                 <h5 class="card-title">Plan Reductores</h5>
                 <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -434,7 +444,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/radio-frecuencia-corporal.jpg" class="card-img-top" alt="...">
+              <img src="/assets/img/paquetes/radio-frecuencia-corporal.jpg" class="card-img-top" alt="Plan estético Reductor Anticelulitis">
               <div class="card-body">
                 <h5 class="card-title">Plan Reductores Anticelulitis</h5>
                 <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -450,7 +460,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/toniificador.jpg" class="card-img-top" alt="...">
+              <img src="/assets/img/paquetes/toniificador.jpg" class="card-img-top" alt="Plan estético Tonificador">
               <div class="card-body">
                 <h5 class="card-title">Plan Tonificador</h5>
                 <ul class="list-group list-group-flush">
@@ -464,7 +474,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/facial-limpieza.jpg" class="card-img-top" alt="...">
+              <img src="/assets/img/paquetes/facial-limpieza.jpg" class="card-img-top" alt="Plan estético Limpieza Facial">
               <div class="card-body">
                 <h5 class="card-title">Plan Limpieza Facial</h5>
                 <ul class="list-group list-group-flush">
@@ -481,7 +491,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/face-meso.jpg" class="card-img-top" alt="...">
+              <img src="/assets/img/paquetes/face-meso.jpg" class="card-img-top" alt="Plan estético Mesoterapia">
               <div class="card-body">
                 <h5 class="card-title">Plan Facial Mesoterapia</h5>
                 <ul class="list-group list-group-flush">
@@ -495,7 +505,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/facial-plasma.jpg" class="card-img-top" alt="...">
+              <img src="/assets/img/paquetes/facial-plasma.jpg" class="card-img-top" alt="Plan estético Facial con Plasma">
               <div class="card-body">
                 <h5 class="card-title">Plan Facial Plasma</h5>
                 <ul class="list-group list-group-flush">
@@ -520,14 +530,14 @@
 
       <div class="section-title">
         <span>Equipo</span>
-        <h2>Equipo</h2>
+        <h4>Equipo</h4>
         <p>Nos consolidamos como un equipo multidisciplinario que reúne las mejores prácticas y métodos de belleza, para así brindarle la mejor experiencia en los últimos tratamientos estéticos.</p>
       </div>
 
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
           <div class="member">
-            <img src="/assets/img/equipo/perfil-esteticista-1.jpg" alt="">
+            <img src="/assets/img/equipo/perfil-esteticista-1.jpg" alt="esteticista profesional">
             <h4>Erika Campos</h4>
             <span>Esteticista Profesional</span>
             <p>
@@ -543,7 +553,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
           <div class="member">
-            <img src="/assets/img/equipo/perfil-cosmetologa-2.jpg" alt="">
+            <img src="/assets/img/equipo/perfil-cosmetologa-2.jpg" alt="cosmetologa">
             <h4>Jessica Lopez</h4>
             <span>Cosmetologa</span>
             <p>
@@ -559,7 +569,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
           <div class="member">
-            <img src="/assets/img/equipo/perfil-cosmiatra-3.jpg" alt="">
+            <img src="/assets/img/equipo/perfil-cosmiatra-3.jpg" alt="cosmiatra">
             <h4>Jennifer Perez</h4>
             <span>Cosmiatra</span>
             <p>
@@ -585,12 +595,12 @@
 
     <div class="section-title">
       <span>Contacto</span>
-      <h2>Contacto</h2>
+      <h4>Contacto</h4>
       <p>Queremos conocerte, por eso nos puede ubicar y contactar en la siguiente información para pedir un turno previo</p>
     </div>
 
     <div>
-      <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.9435284223086!2d-58.45623108481504!3d-34.55498518047221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb42db697d3d1%3A0x1c1fe1b2ae9d91af!2sAv.%20Monroe%201800%2C%20C1428BKV%20CABA!5e0!3m2!1ses!2sar!4v1653537709392!5m2!1ses!2sar" frameborder="0" allowfullscreen></iframe>
+      <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.9435284223086!2d-58.45623108481504!3d-34.55498518047221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb42db697d3d1%3A0x1c1fe1b2ae9d91af!2sAv.%20Monroe%201800%2C%20C1428BKV%20CABA!5e0!3m2!1ses!2sar!4v1653537709392!5m2!1ses!2sar" frameborder="0" allowfullscreen title="dirección av. monreo 1800"></iframe>
     </div>
 
     <div class="row mt-5">
@@ -677,7 +687,7 @@
       <div class="row">
 
         <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Mari Beauty Clinic</h3>
+          <h4>Mari Beauty Clinic</h4>
           <p>
             Monroe 1800  <br>
             Barrio Belgrano<br>
