--- a/servicios-details.html
+++ b/servicios-details.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="estetica y belleza">
-
+    <!-- Meta Tags -->
+    <meta name="description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como por ejemplo: la reducción de grasa adiposa con criolipolisis, eliminación de vello con laser IPL o soprano, bótox, himfu para el moldeado del cuerpo, tratamiento faciales rejuvenecedores y mucho más.">
+    <meta name="keywords" content="Criolipolisis, depilaser, botox, himfu, lifting, dermapen, limpieza facial, exfoliación, plasma, mesolifting, velaslim, radiofrecuencia, velashape">
     <!-- Titulo de la Pagina -->
     <title>Mari Beuaty Clinic</title>
+
+    <!-- Open graph -->
+    <meta property="og:locale" content="es">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mari Beuaty Clinic">
+    <meta property="og:description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como: Criolipolisis, Himfu, Velashape, Botox y mucho más">
+    <meta property="og:url" content="https://maribeautyclinic.000webhostapp.com/servicios-details.html">
+    <meta property="og:image" content="https://maribeautyclinic.000webhostapp.com/assets/img/hero-img-3.png.">
 
     <!-- Favicon -->
     <link rel="icon" href="assets/img/favicon.ico">
@@ -23,9 +33,10 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS vendor -->
+    <!-- CSS vendor Bootstrap y otros -->
     <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/vendor/glightbox/css/glightbox.min.css">
 
     <!-- Archivo CSS Templai -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -150,7 +161,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" alt="">
+                  <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" alt="tratamiento criolipolisis">
                 </div>
 
                 <!-- <div class="swiper-slide">
@@ -168,7 +179,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Criolipolisis</h3>
+              <h2>Criolipolisis</h2>
               <ul>
                 <li><strong>Tratamiento</strong>: Corporal</li>
                 <li><strong>Método</strong>: No invasivo</li>
@@ -177,7 +188,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Tratamiento con Crioliposis</h2>
+              <h3>Tratamiento con Crioliposis</h3>
               <p>
                 La criolipólisis es un método que ayuda eliminar la grasa localizada mediante el enfriamiento -8 grados. Con una sesión puedes 
                 perder de 5 a 10 cm dependiendo de su metabolismo.Los resultados se podrán observar a partir de la 4ta semana posterior al tratamiento.
@@ -216,7 +227,7 @@
           <div class="row">
     
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Mari Beauty Clinic</h3>
+              <h4>Mari Beauty Clinic</h4>
               <p>
                 Monroe 1800  <br>
                 Barrio Belgrano<br>
@@ -278,5 +289,6 @@
 
 <!-- Archive JS vendor -->
 <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
 
 <body>
