--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como por ejemplo: la reducción de grasa adiposa con criolipolisis, eliminación de vello con laser IPL o soprano, bótox, himfu para el moldeado del cuerpo, tratamiento faciales rejuvenecedores y mucho más.">
     <meta name="keywords" content="Criolipolisis, depilaser, botox, himfu, lifting, dermapen, limpieza facial, exfoliación, plasma, mesolifting, velaslim, radiofrecuencia, velashape">
     <!-- Titulo de la Pagina -->
-    <title>Mari Beuaty Clinic</title>
+    <title>Mari Beauty Clinic</title>
 
     <!-- Open graph -->
 
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Mari Beuaty Clinic">
     <meta property="og:description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como: Criolipolisis, Himfu, Velashape, Botox y mucho más">
     <meta property="og:url" content="https://maribeautyclinic.000webhostapp.com/servicios-details.html">
-    <meta property="og:image" content="https://maribeautyclinic.000webhostapp.com/assets/img/hero-img-3.png.">
+    <meta property="og:image" content="https://maribeautyclinic.000webhostapp.com/assets/img/imagen-mujer-beuaty-3.png">
     <!-- Favicon -->
     <link rel="icon" href="assets/img/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
